tests/specs/ecosystem/pdf/pdftext/1_0_0.test
pdf/pdftext/1.0.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mod.ts:21:16
   | 
21 | async function renderPage(pdfDoc : PdfDocument) {
   |                ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mod.ts:33:14
   | 
33 | export const pdfText = async (dataBuffer : DataBuffer)=> {
   |              ^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-nested-javascript]: referenced a JavaScript module without type declarations from a TypeScript module
 --> /pdf.min.mjs
  = hint: add a type declaration (d.ts) for the JavaScript module, or rewrite it to TypeScript

  info: JavaScript files with no corresponding declaration require type inference to be type checked
  info: fast check avoids type inference, so referencing a JavaScript file with no type declarations is not supported
  docs: https://jsr.io/go/slow-type-unsupported-nested-javascript


